fix: AI search uses ES keyword search for article recall (was sparse RAG index)
Root cause: AI search relied solely on RAG vector index which only had
~5 indexed articles (only those users manually opened). ES keyword index
covers all 99 published articles via Canal outbox consumer.

Now: ES keyword search → article list → LLM summary with full coverage.
Vector chunks supplement as available for deeper context.